fix: add support for -Djava.ext.dirs and -Djava.endorsed.dirs
Both of these use = instead of : for their adjacent arg specification.

Why does javac support both : and =? I have no idea, but whatever we can
deal.